stuck in bugs

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,12 +5,15 @@
 /* animation fadeUp one : "animatto-fadeUp-One */
 /* animation fadeUp one : "animatto-fadeUp-Two */
 /* animation timing class : "animatto-timing" */
+/* animation fadein Bounce one class : "animatto-fadeIn-Bounce-One" */
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+
 
 /* some reuseable toggle classes for javascript DOM manipulation */
 .animatto-display-none {
@@ -140,5 +143,46 @@
         -moz-transform: translateY(-80%);
         -ms-transform: translateY(-80%);
         -o-transform: translateY(-80%);
+    }
+}
+
+/* ---fade__in__bounce--- */
+@keyframes animatto-fade-in-bounce-one{
+    0%{
+        transform: translateX(-50%)   ;
+        -webkit-transform: translateX(-50%)   ;
+        -moz-transform: translateX(-50%)   ;
+        -ms-transform: translateX(-50%)   ;
+        -o-transform: translateX(-50%)   ;
+        opacity:0;
+    }
+    30%{
+        transform: translateX(8%)   ;
+        -webkit-transform: translateX(8%)   ;
+        -moz-transform: translateX(8%)   ;
+        -ms-transform: translateX(8%)   ;
+        -o-transform: translateX(8%)   ;
+    }
+    60%{
+        transform: translateX(5%)   ;
+        -webkit-transform: translateX(5%)   ;
+        -moz-transform: translateX(5%)   ;
+        -ms-transform: translateX(5%)   ;
+        -o-transform: translateX(5%)   ;
+    }80%{
+        transform: translateX(2%)   ;
+        -webkit-transform: translateX(2%)   ;
+        -moz-transform: translateX(2%)   ;
+        -ms-transform: translateX(2%)   ;
+        -o-transform: translateX(2%)   ;
+    }   
+    /* reset point */
+    50%,70%, 90%,100%{
+        transform: translateX(0%)   ;
+        -webkit-transform: translateX(0%)   ;
+        -moz-transform: translateX(0%)   ;
+        -ms-transform: translateX(0%)   ;
+        -o-transform: translateX(0%)   ;
+        opacity:1;
     }
 }
